--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,9 +24,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Show directory structure
+      run: tree
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
         name: moj_artifakt_cuj
-        path: ./my-app/target/my-app-1.0-SNAPSHOT.jar
+        path: ./target/my-app-1.0-SNAPSHOT.jar
         retention-days: 5
