--- a/.github/workflows/docker_multistage.yml
+++ b/.github/workflows/docker_multistage.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Docker multistage
 
 on:
   push:
@@ -33,7 +33,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         context: ./
-        file: ./Dockerfile_with_maven
+        file: ./Dockerfile_build_with_maven
         push: true
         tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
 
